Fix incorrect "is in fullscreen" handling, fix page background color on mobile.

--- a/front/src/App.module.css
+++ b/front/src/App.module.css
@@ -38,4 +38,5 @@
     cursor: pointer;
     display: inline;
     user-select: none;
+    overflow-wrap: break-word;
 }
