--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     height: 100%;
     font-family: sans-serif;
+    background-color: #000;
 }
 
 #root {
